adding missing import

--- a/src/pages/articles/beautiful-analysis.mdx
+++ b/src/pages/articles/beautiful-analysis.mdx
@@ -37,6 +37,7 @@ import {
   generateTooltipData
 } from "data/beautiful-analysis.js";
 import { colorMap } from "data/beautiful-analysis.js";
+import COLORS from "utils/styles";
 
 _[Beautiful Stories From Anonymous People](https://www.earwolf.com/show/beautiful-anonymous/)_
 (a.k.a. _Beautiful / Anonymous_) is a podcast with a simple premise: "One phone
