--- a/src/pages/articles/beautiful-analysis.mdx
+++ b/src/pages/articles/beautiful-analysis.mdx
@@ -2,7 +2,7 @@
 title: "Beautiful / Analysis"
 date: "2019-08-29"
 featured_image: "../../images/featured_images/beautiful_analysis.jpg"
-caption: "What does math have to say about a guy who has nothing to say about math?"
+caption: "What does math have to say about a guy who'd rather not think about math?"
 featured_image_caption: "Comedian Chris Gethard, host of Beautiful / Anonymous. Image credit: NJ.com"
 tags:
   - podcasts
