WIP migrating to gatsby-plugin-mdx; lots of todos

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,24 @@
+- warn gatsby-plugin-feed was initialized in gatsby-config.js without a title in a feed.
+This means that the plugin will use the default feed title, which may not match your use case.
+This behavior will be removed in the next major release of gatsby-plugin-feed.
+For more info, check out: https://gatsby.dev/adding-rss-feed
+- warn ESLintError: 
+/Users/matthewlane/Dev/personal-site/src/story_components/molecules/InteractiveGrid/index.js
+  143:7  warning  onMouseOut must be accompanied by onBlur for accessibility  jsx-a11y/mouse-events-have-key-events
+- warn ESLintError: 
+/Users/matthewlane/Dev/personal-site/src/story_components/templates/PAdicCalculator/index.js
+  18:17  warning  A form label must be associated with a control  jsx-a11y/label-has-associated-control
+  28:17  warning  A form label must be associated with a control 
+- make sure blog pages actually render mdx
+- audit tooling, see if any config can be removed
+- swap enzyme for react testing library
+- test audit
+- hook for slider
+- other hooks?
+- timeToRead
+- remove redux
+
+
 - pagination for stories
 - better loading screen on initial page load
 - add ci
