fixing figure customization in mdx

--- a/src/pages/posts/warming-dots.mdx
+++ b/src/pages/posts/warming-dots.mdx
@@ -20,7 +20,7 @@ Sometimes, when the problems of the world seem overwhelming, it's worth remember
 
 From this perspective, it's hard not to feel insignificant. This may be cold comfort, but in a twisted way it's sort of comforting. It makes a lot of the problems that we're facing seem less significant as well. After all, what's the worst that can happen? We fail as a species, and the universe marches on.
 
-![Can you find the pale blue dot?](../../images/pale_blue_dot.png "Can you find the pale blue dot? (Source: NASA)"){.w-80}
+![Can you find the pale blue dot?](../../images/pale_blue_dot.png "Can you find the pale blue dot? (Source: NASA)")
 
 But the Pale Blue Dot perspective is about more than just nihilism. It can also help frame some of our global issues in a new light. Take global warming, for instance. The surface of the Earth is warming because of human activity, and we're at a point where our survival as a species is jeopardized because of the rapid changes we've made to the planet.
 
