--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,3 @@
-- warn ESLintError: 
-/Users/matthewlane/Dev/personal-site/src/story_components/molecules/InteractiveGrid/index.js
-  143:7  warning  onMouseOut must be accompanied by onBlur for accessibility  jsx-a11y/mouse-events-have-key-events
-- warn ESLintError: 
-/Users/matthewlane/Dev/personal-site/src/story_components/templates/PAdicCalculator/index.js
-  18:17  warning  A form label must be associated with a control  jsx-a11y/label-has-associated-control
-  28:17  warning  A form label must be associated with a control 
 - make sure blog pages actually render mdx
 - audit tooling, see if any config can be removed
 - swap enzyme for react testing library
@@ -12,6 +5,8 @@
 - hook for slider
 - other hooks?
 - remove redux
+- fix slider styling (circle isn't centered!)
+- fix rent interactive in http://localhost:8000/stories/fairest-of-them-all/ (button blocked by something)
 
 
 - pagination for stories
